# frotend-rest2mcp

./: .env.example  .gitignore  Makefile  README.md  dashboard.html  index.html  loja_api.py  main.py  mcp_server_universal_landing.html  opencode.json  package-lock.json  package.json  petstore-v3.json  pyproject.toml  requirements.txt  setup.ps1  setup.sh  test_api.sh  vite.config.js
.git_disabled/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  opencode
.git_disabled/gk/: config
.git_disabled/objects/pack/: pack-e0f90446cef69a232ce9fc69063424c5783256ca.idx  pack-e0f90446cef69a232ce9fc69063424c5783256ca.pack  pack-e0f90446cef69a232ce9fc69063424c5783256ca.rev
.git_disabled/refs/remotes/origin/: dev  main
.git_disabled/refs/remotes/origin/feat/: supabase-auth-payment
app/: cloud.py  cloud_models.py  config.py  main.py  openapi.py  paypal.py  server.py  supabase_auth.py  utils.py
docs/: sync-protocol.md
examples/: loja_api.py  tarefas_api.py  test_spec.json
examples/loja-api/: index.js  package-lock.json  package.json
examples/tarefas-api/: index.js  package-lock.json  package.json
scripts/: setup.ps1  setup.sh
sql/: init.sql
src/: App.svelte  Dashboard.css  Dashboard.svelte  Landing.css  Landing.svelte  app-alert.js  app.css  main.js  vite-env.d.ts
src/stores/: servers.js
